src/scss/theme.scss
@charset "utf-8";

/* Default Variable Values - Sass 2.0 doesn't allow dynamic variable creation */
$text-primary: "text-primary";
$text-secondary: "text-secondary";

$background-primary: "background-primary";
$background-secondary: "background-secondary";
$background-overlay: "background-overlay";
$background-info: "background-info";
$background-success: "background-success";
$background-warning: "background-warning";
$background-error: "background-error";

/* Theme Schema */
$themes: (
    light: (
        text-primary: rgb(10, 10, 10),
        text-secondary: rgb(41, 41, 41),

        background-primary: hsl(180, 5.7%, 75%),
        background-secondary: hsl(180, 3.1%, 90%),
        background-overlay: rgba(167, 167, 167, 0.9),
        background-info: hsl(204, 71%, 39%),
        background-success: hsl(141, 53%, 31%),
        background-warning: hsl(48, 100%, 29%),
        background-error: hsl(348, 86%, 43%),
    ),
    dark: (
        text-primary: rgb(245, 245, 245),
        text-secondary: rgb(161, 161, 161),

        background-primary: hsl(180, 5.7%, 13.7%),
        background-secondary: hsl(180, 3.1%, 25.1%),
        background-overlay: rgba(59, 59, 59, 0.9),
        background-info: hsl(204, 86%, 53%),
        background-success: hsl(153, 53%, 53%),
        background-warning: hsl(48, 100%, 67%),
        background-error: hsl(348, 100%, 61%),
    )
);

@mixin themed() {
    @each $theme, $map in $themes {
        :global(.theme--#{$theme}) & {
            $theme-map: () !global;
            @each $key, $submap in $map {
                $value: map-get(map-get($themes, $theme), '#{$key}');
                $theme-map: map-merge($theme-map, ($key: $value)) !global;
            }
            @content;
            $theme-map: null !global;
        }
    }
}

@function t($key) {
    @return map-get($theme-map, $key);
}

